test/pass/enums_and_variants/enum_class_member_function.lily
enum Test[A] {
    One(A),
    Two

    define or_else(other: A) : A {
        match self: {
            case One(s):
                return s
            case Two:
                return other
        }
    }
}

if Test.or_else(One(1), 2) != 1:
    stderr.print("Failed.")

